--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@project-serum/anchor": "^0.18.2",
     "@project-serum/sol-wallet-adapter": "^0.2.6",
     "@solana/wallet-adapter-ant-design": "^0.9.1",
     "@solana/wallet-adapter-base": "^0.7.0",
@@ -16,6 +17,7 @@
     "@solana/web3.js": "^1.30.2",
     "antd": "^4.17.1",
     "borsh": "^0.6.0",
+    "fs": "^0.0.1-security",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.5.2",
