--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/wallet-adapter-ant-design": "^0.9.1",
     "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/wallet-adapter-react": "^0.13.1",
+    "@solana/wallet-adapter-react-ui": "^0.6.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
     "@solana/web3.js": "^1.30.2",
     "antd": "^4.17.1",
@@ -22,7 +23,8 @@
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.5.2",
     "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
