--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/mocha": "^9.0.0",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
