--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-plugin-antd-less": "^1.5.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-identicons": "^1.2.5",
     "swr": "^1.0.1"
   },
   "devDependencies": {
