--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^4.17.1",
     "borsh": "^0.6.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.1",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-antd-less": "^1.5.2",
