--- a/anchor-voting/package.json
+++ b/anchor-voting/package.json
@@ -1,12 +1,13 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.18.2"
+        "@project-serum/anchor": "^0.18.2",
+        "bs58": "^4.0.1"
     },
     "devDependencies": {
+        "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
-        "@types/mocha": "^9.0.0",
         "typescript": "^4.3.5"
     }
 }
